# pucp_bootcamp_202401

./: .gitignore  README.md  environment.yml  environment_cuda.yml  pyproject.toml
nbs/: 01_classic_methods.ipynb  02_deep_learning_for_nlp.ipynb  03_language_models.ipynb  04_fine_tuning.ipynb  04_transformer.ipynb  05_llm.ipynb  05_transformer.ipynb  06_clustering.ipynb  06_llm.ipynb  07_more_llm_examples.ipynb
