[project]
name = "pucp-bootcamp"
version = "0.1.0"
description = "Fundamentos de procesamiento de lenguaje natural"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "accelerate>=1.9.0",
  "anywidget>=0.9.18",
  "datasets>=4.0.0",
  "einops>=0.8.1",
  "evaluate>=0.4.5",
  "faiss-cpu>=1.11.0.post1",
  "fastai==2.7.19",
  "google-genai>=1.28.0",
  "hdbscan>=0.8.40",
  "ipywidgets>=8.1.7",
  "llvmlite>=0.44.0",
  "matplotlib>=3.10.3",
  "notebook>=7.4.4",
  "numpy>=2.2.6",
  "pandas>=2.3.1",
  "plotly[express]>=6.2.0",
  "polars>=1.31.0",
  "scikit-learn>=1.7.1",
  "torch==2.6",
  "transformers>=4.54.1",
  "umap-learn>=0.5.9",
]
